--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,10 @@ IPASS_DB_DSN="user:pass@tcp(127.0.0.1:3306)/lingxingipass?parseTime=true&charset
 # 日志（JSON Lines）
 IPASS_LOG_DIR="logs"
 
+# 可靠性（系统配置）
+# - 同一 dscoOrderId 在单个环节的最大重试次数；达到上限后转人工，避免无限重试
+IPASS_MAX_RETRY_PER_ORDER="5"
+
 # HTTP 管理端（一期最小运维面）
 IPASS_HTTP_ENABLE="true"
 IPASS_HTTP_ADDR=":8080"
@@ -43,6 +47,12 @@ IPASS_JOB_ACK_TO_DSCO_INTERVAL_SEC="30"
 # Step6：发货回传 DSCO
 IPASS_JOB_SHIP_TO_DSCO_ENABLE="false"
 IPASS_JOB_SHIP_TO_DSCO_INTERVAL_SEC="30"
+
+# 发货回传口径（业务配置）
+# - delivered_at：使用领星 WMS delivered_at 作为 DSCO shipDate
+# - stock_delivered_at：使用领星 WMS stock_delivered_at 作为 DSCO shipDate
+# - none：不回传 shipDate
+IPASS_SHIP_DATE_SOURCE="delivered_at"
 
 # Step7：发票回传 DSCO
 IPASS_JOB_INVOICE_TO_DSCO_ENABLE="false"
