--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,9 @@ IPASS_MAX_RETRY_PER_ORDER="5"
 IPASS_HTTP_ENABLE="true"
 IPASS_HTTP_ADDR=":8080"
 
+# Admin 后台访问密码（一期最小：单密码；用于 UI 与管理 API）
+IPASS_ADMIN_PASSWORD="change-me"
+
 # DSCO（一期：请求头静态 bearer token）
 IPASS_DSCO_BASE_URL="https://api.dsco.io/api/v3"
 IPASS_DSCO_TOKEN="bearer-token-here"
