--- a/.env.example
+++ b/.env.example
@@ -12,8 +12,8 @@ IPASS_MAX_RETRY_PER_ORDER="5"
 IPASS_HTTP_ENABLE="true"
 IPASS_HTTP_ADDR=":8080"
 
-# Admin 后台访问密码（一期最小：单密码；用于 UI 与管理 API）
-IPASS_ADMIN_PASSWORD="change-me"
+# 业务进程 ops 接口鉴权密码（admin 将通过请求头 X-Ops-Password 调用）
+IPASS_OPS_PASSWORD="change-me-ops"
 
 # DSCO（一期：请求头静态 bearer token）
 IPASS_DSCO_BASE_URL="https://api.dsco.io/api/v3"
