完善服务默认前置信息

--- a/.env.admin.example
+++ b/.env.admin.example
@@ -11,7 +11,8 @@ ADMIN_HTTP_ADDR=":8081"
 ADMIN_PASSWORD="change-me-admin"
 
 # 业务进程 ops 服务地址（admin 触发任务时会调用它）
-ADMIN_OPS_BASE_URL="http://127.0.0.1:8080"
+# - 本机直跑（两个进程都在宿主机）：http://127.0.0.1:8085
+# - Docker Compose（admin 在容器内，通过服务名访问业务容器）：http://ipass:8085
+ADMIN_OPS_BASE_URL="http://127.0.0.1:8085"
 # 调用 ops 需要的密码（请求头 X-Ops-Password）
 ADMIN_OPS_PASSWORD="change-me-ops"
-
