--- a/env.yaml.example
+++ b/env.yaml.example
@@ -72,16 +72,12 @@ auth:
 
 integration:
   dsco:
-    base_url: "https://api.dsco.io"
-    codes: {}
+    # 可选：为空则使用 SDK 默认 BaseURLProd（https://api.dsco.io/api/v3）
+    base_url: ""
   lingxing:
-    base_url: "https://openapi.lingxing.com"
-    # 可选：如果你有长期有效 access_token，可填；否则为空，由 AutoToken 自动获取
-    access_token: ""
+    # 可选：为空则使用 SDK 默认 BaseURLProd（https://openapi.lingxing.com）
+    base_url: ""
     platform_code: 0
-    store_id: ""
-    sid: 0
-  shipment:
-    # delivered_at / stock_delivered_at / none
-    ship_date_source: "delivered_at"
-
+    # store_id / sid 均不放在 env.yaml：
+    # - store_id：由 DSCO 订单的 dscoRetailerId 通过 runtime_config.mapping.shop 映射得到
+    # - sid：由 DSCO 订单的 shippingServiceLevelCode 通过 runtime_config.mapping.shipment 映射得到
