完善库存同步接口

--- a/env.yaml.example
+++ b/env.yaml.example
@@ -4,6 +4,12 @@ base:
   # 服务环境：dev/test/release
   env: "dev"
 
+api:
+  # 是否对外暴露 /api/v1/*（建议默认 false，按部署环境决定是否开启）
+  enable: false
+  # 对外 API Bearer Token（部署级机密；不要写进 runtime_config）
+  token: "CHANGE_ME"
+
 db:
   # 优先使用 DSN；为空时按 postgres 组装。
   dsn: ""
